- Added Greetings Message - Added Menu choice for Admin Dashboard - Added Customer Management choice in the menu - Added Employee Management choice in the menu - CRUD in Customer Management, check if there is a foreign key before deleting an element (customer)

--- a/StoreManager/LoginWindow.xaml
+++ b/StoreManager/LoginWindow.xaml
@@ -261,7 +261,7 @@
                 </StackPanel>
 
                 <!-- Cancel Button -->
-                <Button Grid.Row="12" x:Name="btn_Cancel" Content="Cancel"
+                <Button Grid.Row="12" x:Name="btn_Cancel" Content="Exit"
                         Style="{StaticResource CancelButtonStyle}"
                         HorizontalAlignment="Center"
                         Margin="0,20,0,0"
