--- a/StoreManager/MainWindow.xaml
+++ b/StoreManager/MainWindow.xaml
@@ -5,10 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StoreManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Management Window" Height="535" Width="1193" ResizeMode="NoResize">
+    <Grid Margin="0,0,-22,0">
         <Label x:Name="lblRole" Content="Role" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="40" Height="66"/>
-        <Button x:Name="btn_Logout" Content="Logout" HorizontalAlignment="Left" Margin="564,358,0,0" VerticalAlignment="Top" Width="101" Click="btn_Logout_Click"/>
+        <Button x:Name="btn_Logout" Content="Logout" HorizontalAlignment="Left" Margin="996,452,0,0" VerticalAlignment="Top" Width="101" Click="btn_Logout_Click"/>
+        <DataGrid x:Name="dgCustomer" Margin="261,76,22,164" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding CustomerId}" Width="*"/>
+                <DataGridTextColumn Header="Company Name" Binding="{Binding CompanyName}" Width="*"/>
+                <DataGridTextColumn Header="Contact Name" Binding="{Binding ContactName}" Width="*"/>
+                <DataGridTextColumn Header="Contact Title" Binding="{Binding ContactTitle}" Width="*"/>
+                <DataGridTextColumn Header="Address" Binding="{Binding Address}" Width="*"/>
+                <DataGridTextColumn Header="Phone" Binding="{Binding Phone}" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Menu Margin="0,0,959,0" Background="DarkViolet"/>
+        <Button x:Name="btn_CreateCustomer" Content="Create" HorizontalAlignment="Left" Margin="380,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_CreateCustomer_Click"/>
+        <Button x:Name="btn_UpdateCustomer" Content="Update" HorizontalAlignment="Left" Margin="596,452,0,0" Width="102" VerticalAlignment="Top" Click="btn_UpdateCustomer_Click"/>
+        <Button x:Name="btn_DeleteCustomer" Content="Delete" HorizontalAlignment="Left" Margin="819,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_DeleteCustomer_Click"/>
+        <Button x:Name="btn_CustomerMenu" Content="Managing Customer" HorizontalAlignment="Left" Margin="0,56,0,0" VerticalAlignment="Top" Width="240"/>
+        <Label x:Name="lbl_NameGreeting" Content="Member!" FontSize="15" HorizontalAlignment="Left" VerticalAlignment="Top" Width="224" Height="38" Margin="10,0,0,0"/>
+        <Button x:Name="btn_EmployeeMenu" Content="Managing Employee" HorizontalAlignment="Left" Margin="0,98,0,0" VerticalAlignment="Top" Width="240"/>
 
     </Grid>
 </Window>
