--- a/StoreManager/MainWindow.xaml
+++ b/StoreManager/MainWindow.xaml
@@ -20,12 +20,24 @@
             </DataGrid.Columns>
         </DataGrid>
         <Menu Margin="0,0,959,0" Background="DarkViolet"/>
-        <Button x:Name="btn_CreateCustomer" Content="Create" HorizontalAlignment="Left" Margin="380,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_CreateCustomer_Click"/>
-        <Button x:Name="btn_UpdateCustomer" Content="Update" HorizontalAlignment="Left" Margin="596,452,0,0" Width="102" VerticalAlignment="Top" Click="btn_UpdateCustomer_Click"/>
-        <Button x:Name="btn_DeleteCustomer" Content="Delete" HorizontalAlignment="Left" Margin="819,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_DeleteCustomer_Click"/>
-        <Button x:Name="btn_CustomerMenu" Content="Managing Customer" HorizontalAlignment="Left" Margin="0,56,0,0" VerticalAlignment="Top" Width="240"/>
+        <Button x:Name="btn_CreateCustomer" Content="Create" HorizontalAlignment="Left" Margin="380,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_Create_Click"/>
+        <Button x:Name="btn_UpdateCustomer" Content="Update" HorizontalAlignment="Left" Margin="596,452,0,0" Width="102" VerticalAlignment="Top" Click="btn_Update_Click"/>
+        <Button x:Name="btn_DeleteCustomer" Content="Delete" HorizontalAlignment="Left" Margin="819,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_Delete_Click"/>
+        <Button x:Name="btn_CustomerMenu" Content="Managing Customer" HorizontalAlignment="Left" Margin="0,56,0,0" VerticalAlignment="Top" Width="240" Click="btn_CustomerMenu_Click"/>
         <Label x:Name="lbl_NameGreeting" Content="Member!" FontSize="15" HorizontalAlignment="Left" VerticalAlignment="Top" Width="224" Height="38" Margin="10,0,0,0"/>
-        <Button x:Name="btn_EmployeeMenu" Content="Managing Employee" HorizontalAlignment="Left" Margin="0,98,0,0" VerticalAlignment="Top" Width="240"/>
+        <Button x:Name="btn_EmployeeMenu" Content="Managing Employee" HorizontalAlignment="Left" Margin="0,98,0,0" VerticalAlignment="Top" Width="240" Click="btn_EmployeeMenu_Click"/>
+        <DataGrid x:Name="dgEmployee" Margin="261,76,22,164" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding EmployeeId}" Width="*"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"/>
+                <DataGridTextColumn Header="User Name" Binding="{Binding UserName}" Width="*"/>
+                <DataGridTextColumn Header="Job Title" Binding="{Binding JobTitle}" Width="*"/>
+                <DataGridTextColumn Header="Birth Date" Binding="{Binding BirthDate}" Width="*"/>
+                <DataGridTextColumn Header="Hire Date" Binding="{Binding HireDate}" Width="*"/>
+                <DataGridTextColumn Header="Address" Binding="{Binding Address}" Width="*"/>
+                <DataGridTextColumn Header="Role" Binding="{Binding RoleNum}" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
     </Grid>
 </Window>
