--- a/StoreManager/MainWindow.xaml
+++ b/StoreManager/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StoreManager"
         mc:Ignorable="d"
-        Title="Management Window" Height="535" Width="1193" ResizeMode="NoResize">
+        Title="Management Window" Height="835" Width="1193" ResizeMode="NoResize">
     <Grid Margin="0,0,-22,0">
         <Label x:Name="lblRole" Content="Role" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="40" Height="66"/>
-        <Button x:Name="btn_Logout" Content="Logout" HorizontalAlignment="Left" Margin="996,452,0,0" VerticalAlignment="Top" Width="101" Click="btn_Logout_Click"/>
-        <DataGrid x:Name="dgCustomer" Margin="261,76,22,164" AutoGenerateColumns="False">
+        <Button x:Name="btn_Logout" Content="Logout" HorizontalAlignment="Left" Margin="1001,720,0,0" VerticalAlignment="Top" Width="101" Click="btn_Logout_Click" Height="47"/>
+        
+        <DataGrid x:Name="dgCustomer" Margin="273,95,22,365" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding CustomerId}" Width="*"/>
                 <DataGridTextColumn Header="Company Name" Binding="{Binding CompanyName}" Width="*"/>
@@ -20,13 +21,13 @@
             </DataGrid.Columns>
         </DataGrid>
         <Menu Margin="0,0,959,0" Background="DarkViolet"/>
-        <Button x:Name="btn_CreateCustomer" Content="Create" HorizontalAlignment="Left" Margin="380,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_Create_Click"/>
-        <Button x:Name="btn_UpdateCustomer" Content="Update" HorizontalAlignment="Left" Margin="596,452,0,0" Width="102" VerticalAlignment="Top" Click="btn_Update_Click"/>
-        <Button x:Name="btn_DeleteCustomer" Content="Delete" HorizontalAlignment="Left" Margin="819,452,0,0" Width="101" VerticalAlignment="Top" Click="btn_Delete_Click"/>
+        <Button x:Name="btn_Create" Content="Create" HorizontalAlignment="Left" Margin="459,720,0,0" Width="101" VerticalAlignment="Top" Click="btn_Create_Click" Height="47"/>
+        <Button x:Name="btn_Update" Content="Update" HorizontalAlignment="Left" Margin="642,720,0,0" Width="102" VerticalAlignment="Top" Click="btn_Update_Click" Height="47"/>
+        <Button x:Name="btn_Delete" Content="Delete" HorizontalAlignment="Left" Margin="833,720,0,0" Width="101" VerticalAlignment="Top" Click="btn_Delete_Click" Height="47"/>
         <Button x:Name="btn_CustomerMenu" Content="Managing Customer" HorizontalAlignment="Left" Margin="0,56,0,0" VerticalAlignment="Top" Width="240" Click="btn_CustomerMenu_Click"/>
         <Label x:Name="lbl_NameGreeting" Content="Member!" FontSize="15" HorizontalAlignment="Left" VerticalAlignment="Top" Width="224" Height="38" Margin="10,0,0,0"/>
         <Button x:Name="btn_EmployeeMenu" Content="Managing Employee" HorizontalAlignment="Left" Margin="0,98,0,0" VerticalAlignment="Top" Width="240" Click="btn_EmployeeMenu_Click"/>
-        <DataGrid x:Name="dgEmployee" Margin="261,76,22,164" AutoGenerateColumns="False">
+        <DataGrid x:Name="dgEmployee" Margin="261,90,38,370" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding EmployeeId}" Width="*"/>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"/>
@@ -39,7 +40,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="btn_Product" Content="Managing Product" HorizontalAlignment="Left" Margin="0,147,0,0" VerticalAlignment="Top" Width="240" Click="btn_Product_Click"/>
-        <DataGrid x:Name="dgProduct" Margin="261,76,22,164" AutoGenerateColumns="False">
+        <DataGrid x:Name="dgProduct" Margin="261,90,22,370" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding ProductId}" Width="*"/>
                 <DataGridTextColumn Header="Product Name" Binding="{Binding ProductName}" Width="150"/>
@@ -54,11 +55,32 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="btn_Category" Content="Managing Category" HorizontalAlignment="Left" Margin="0,196,0,0" VerticalAlignment="Top" Width="240" Click="btn_Category_Click"/>
-        <DataGrid x:Name="dgCategory" Margin="261,76,22,164" AutoGenerateColumns="False">
+        <DataGrid x:Name="dgCategory" Margin="261,90,22,370" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding CategoryId}" Width="*"/>
                 <DataGridTextColumn Header="Category Name" Binding="{Binding CategoryName}" Width="*"/>
                 <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="btn_OrderManager" Content="Managing Order" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Click="btn_OrderManager_Click" Margin="0,245,0,0"/>
+        <DataGrid x:Name="dgOrder" Margin="261,90,38,370" AutoGenerateColumns="False" SelectionChanged="dgOrder_SelectionChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding OrderId}" Width="*"/>
+                <DataGridTextColumn Header="Customer Id" Binding="{Binding CustomerId}" Width="*"/>
+                <DataGridTextColumn Header="Customer Name" Binding="{Binding Customer.ContactName}" Width="*"/>
+                <DataGridTextColumn Header="Employee Id" Binding="{Binding EmployeeId}" Width="*"/>
+                <DataGridTextColumn Header="Employee Name" Binding="{Binding Employee.Name}" Width="*"/>
+                <DataGridTextColumn Header="Order Date" Binding="{Binding OrderDate}" Width="*"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid x:Name="dgOrderDetail" Margin="280,462,41,196" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Order ID" Binding="{Binding OrderId}" Width="*"/>
+                <DataGridTextColumn Header="Product ID" Binding="{Binding ProductId}" Width="*"/>
+                <DataGridTextColumn Header="Product Name" Binding="{Binding Product.ProductName}" Width="*"/>
+                <DataGridTextColumn Header="Price" Binding="{Binding UnitPrice}" Width="*"/>
+                <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="*"/>
+                <DataGridTextColumn Header="Discount" Binding="{Binding Discount}" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
 
