--- a/StoreManager/MainWindow.xaml
+++ b/StoreManager/MainWindow.xaml
@@ -112,7 +112,13 @@
                 <Label x:Name="lblRoleLegacy" Content="Role" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="40" Height="66"/>
                 <Button x:Name="btn_LogoutLegacy" Content="Logout" HorizontalAlignment="Left" Margin="981,700,0,0" VerticalAlignment="Top" Width="101" Click="btn_Logout_Click" Height="47"/>
 
-                <DataGrid x:Name="dgCustomer" Margin="273,95,22,365" AutoGenerateColumns="False">
+                <ComboBox x:Name="cboxProductCategorySearch" Visibility="Collapsed" Margin="0,83,340,0" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+                <Label x:Name="lblSearch" Visibility="Collapsed" Content="Name" Margin="0,82,295,0" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+                <TextBox x:Name="txtSearchValue" Visibility="Collapsed" Margin="0,85,90,0" HorizontalAlignment="Right" VerticalAlignment="Top" Width="200"/>
+                <Button x:Name="btnSearch" Visibility="Collapsed" Content="Search" Margin="0,82,30,0" Padding="3,3,3,3" 
+                        HorizontalAlignment="Right" VerticalAlignment="Top" Click="btn_Search_Clicked"/>
+                
+                <DataGrid x:Name="dgCustomer" Margin="273,110,22,365" AutoGenerateColumns="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding CustomerId}" Width="*"/>
                         <DataGridTextColumn Header="Company Name" Binding="{Binding CompanyName}" Width="*"/>
@@ -129,7 +135,7 @@
                 <Button x:Name="btn_CustomerMenu" Content="Managing Customer" HorizontalAlignment="Left" Margin="0,56,0,0" VerticalAlignment="Top" Width="240" Click="btn_CustomerMenu_Click"/>
                 <Label x:Name="lbl_NameGreeting" Content="Member!" FontSize="15" HorizontalAlignment="Left" VerticalAlignment="Top" Width="224" Height="38" Margin="10,0,0,0"/>
                 <Button x:Name="btn_EmployeeMenu" Content="Managing Employee" HorizontalAlignment="Left" Margin="0,98,0,0" VerticalAlignment="Top" Width="240" Click="btn_EmployeeMenu_Click"/>
-                <DataGrid x:Name="dgEmployee" Margin="261,90,38,370" AutoGenerateColumns="False">
+                <DataGrid x:Name="dgEmployee" Margin="261,110,38,370" AutoGenerateColumns="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding EmployeeId}" Width="*"/>
                         <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"/>
@@ -142,7 +148,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <Button x:Name="btn_Product" Content="Managing Product" HorizontalAlignment="Left" Margin="0,147,0,0" VerticalAlignment="Top" Width="240" Click="btn_Product_Click"/>
-                <DataGrid x:Name="dgProduct" Margin="261,90,22,370" AutoGenerateColumns="False">
+                <DataGrid x:Name="dgProduct" Margin="261,110,22,370" AutoGenerateColumns="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding ProductId}" Width="*"/>
                         <DataGridTextColumn Header="Product Name" Binding="{Binding ProductName}" Width="150"/>
@@ -165,7 +171,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <Button x:Name="btn_OrderManager" Content="Managing Order" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Click="btn_OrderManager_Click" Margin="0,245,0,0"/>
-                <DataGrid x:Name="dgOrder" Margin="261,90,38,370" AutoGenerateColumns="False" SelectionChanged="dgOrder_SelectionChanged">
+                <DataGrid x:Name="dgOrder" Margin="261,110,38,370" AutoGenerateColumns="False" SelectionChanged="dgOrder_SelectionChanged">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ID" Binding="{Binding OrderId}" Width="*"/>
                         <DataGridTextColumn Header="Customer Id" Binding="{Binding CustomerId}" Width="*"/>
