--- a/StoreManager/ManageEmployeeWindow.xaml
+++ b/StoreManager/ManageEmployeeWindow.xaml
@@ -1,38 +1,130 @@
 ﻿<Window x:Class="StoreManager.ManageEmployeeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Manage Employee Window" Height="500" Width="800" Loaded="Window_Loaded">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:StoreManager"
+        mc:Ignorable="d"
+        Title="Manage Employee" Height="650" Width="500" 
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Loaded="Window_Loaded">
+
     <Grid>
-        <Label x:Name="lblEmployeeID" Content="Employee ID" FontSize="16" HorizontalAlignment="Left" Margin="40,40,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtEmployeeID" HorizontalAlignment="Left" Margin="180,45,0,0" Width="200" VerticalAlignment="Top"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="70"/>
+        </Grid.RowDefinitions>
 
-        <Label Content="Name" FontSize="16" HorizontalAlignment="Left" Margin="40,80,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="180,85,0,0" Width="200" VerticalAlignment="Top"/>
+        <!-- Header -->
+        <Border Grid.Row="0" Style="{StaticResource HeaderBorderStyle}">
+            <TextBlock x:Name="lblEditor" Text="Manage Employee" 
+                       Style="{StaticResource HeaderStyle}"/>
+        </Border>
 
-        <Label Content="Username" FontSize="16" HorizontalAlignment="Left" Margin="40,120,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtUserName" HorizontalAlignment="Left" Margin="180,125,0,0" Width="200" VerticalAlignment="Top"/>
+        <!-- Form Content -->
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="20">
+            <StackPanel>
+                <!-- Employee ID -->
+                <StackPanel x:Name="pnlEmployeeID" Margin="0,0,0,15">
+                    <TextBlock x:Name="lblEmployeeID" Text="Employee ID" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtEmployeeID" 
+                             Style="{StaticResource CommonTextBoxStyle}"
+                             IsReadOnly="True" Background="#F0F0F0"/>
+                </StackPanel>
 
-        <Label Content="Password" FontSize="16" HorizontalAlignment="Left" Margin="40,160,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtPassword" HorizontalAlignment="Left" Margin="180,165,0,0" Width="200" VerticalAlignment="Top"/>
+                <!-- Employee Name -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Employee Name *" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtEmployeeName" 
+                             Style="{StaticResource CommonTextBoxStyle}"/>
+                </StackPanel>
 
-        <Label Content="Job Title" FontSize="16" HorizontalAlignment="Left" Margin="40,200,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtJobTitle" HorizontalAlignment="Left" Margin="180,205,0,0" Width="200" VerticalAlignment="Top"/>
+                <!-- User Name -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="User Name *" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtUserName" 
+                             Style="{StaticResource CommonTextBoxStyle}"/>
+                </StackPanel>
 
-        <Label Content="Birth Date" FontSize="16" HorizontalAlignment="Left" Margin="40,240,0,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="dpBirthDate" HorizontalAlignment="Left" Margin="180,245,0,0" Width="200" VerticalAlignment="Top"/>
+                <!-- Password -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Password *" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <PasswordBox x:Name="txtPassword" 
+                                 Height="35" FontSize="14" Padding="10,8"
+                                 BorderBrush="#CCCCCC" BorderThickness="1" Margin="0,0,0,10"/>
+                </StackPanel>
 
-        <Label Content="Hire Date" FontSize="16" HorizontalAlignment="Left" Margin="40,280,0,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="dpHireDate" HorizontalAlignment="Left" Margin="180,285,0,0" Width="200" VerticalAlignment="Top"/>
+                <!-- Job Title -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Job Title" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtJobTitle" 
+                             Style="{StaticResource CommonTextBoxStyle}"/>
+                </StackPanel>
 
-        <Label Content="Address" FontSize="16" HorizontalAlignment="Left" Margin="40,320,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Margin="180,325,0,0" Width="200" VerticalAlignment="Top"/>
+                <!-- Birth Date -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Birth Date" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <DatePicker x:Name="dpBirthDate" 
+                                Height="35" FontSize="14" Margin="0,0,0,10"/>
+                </StackPanel>
 
-        <Label Content="Role" FontSize="16" HorizontalAlignment="Left" Margin="40,360,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtRoleNum" HorizontalAlignment="Left" Margin="180,365,0,0" Width="200" VerticalAlignment="Top"/>
+                <!-- Hire Date -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Hire Date" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <DatePicker x:Name="dpHireDate" 
+                                Height="35" FontSize="14" Margin="0,0,0,10"/>
+                </StackPanel>
 
-        <Button x:Name="btn_SaveEmployee" Content="Save" HorizontalAlignment="Left" Margin="180,420,0,0" Width="100" VerticalAlignment="Top" Click="btn_SaveEmployee_Click"/>
-        <Button x:Name="btn_CancelEmployee" Content="Cancel" HorizontalAlignment="Left" Margin="300,420,0,0" Width="100" VerticalAlignment="Top" Click="btn_CancelEmployee_Click"/>
+                <!-- Address -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Address" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtAddress" 
+                             Style="{StaticResource CommonTextBoxStyle}"
+                             Height="40" AcceptsReturn="True" TextWrapping="Wrap"/>
+                </StackPanel>
 
-        <Label x:Name="lblEditor" Content="Create/Update Employee" FontSize="24" FontWeight="Bold" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Top"/>
+                <!-- Role -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Role *" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <ComboBox x:Name="cboRole" 
+                              Height="35" FontSize="14" Margin="0,0,0,10">
+                        <ComboBoxItem Content="Admin" Tag="1"/>
+                        <ComboBoxItem Content="Manager" Tag="2"/>
+                        <ComboBoxItem Content="Staff" Tag="3"/>
+                    </ComboBox>
+                </StackPanel>
+
+                <!-- Required fields note -->
+                <TextBlock Text="* Required fields" 
+                           FontSize="11" FontStyle="Italic" 
+                           Foreground="#666666" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ScrollViewer>
+
+        <!-- Action Buttons -->
+        <Border Grid.Row="2" Background="#F8F9FA" BorderBrush="#E0E0E0" BorderThickness="0,1,0,0">
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Center" 
+                        VerticalAlignment="Center">
+                <Button x:Name="btn_SaveEmployee" Content="💾 Save" 
+                        Style="{StaticResource SuccessButtonStyle}" 
+                        Width="120" Height="40" Margin="0,0,15,0"
+                        Click="btn_SaveEmployee_Click"/>
+                <Button x:Name="btn_CancelEmployee" Content="❌ Cancel" 
+                        Style="{StaticResource CommonButtonStyle}" 
+                        Width="120" Height="40" Background="#6C757D"
+                        Click="btn_CancelEmployee_Click"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
