--- a/StoreManager/ManageOrderWindow.xaml
+++ b/StoreManager/ManageOrderWindow.xaml
@@ -1,46 +1,87 @@
 ﻿<Window x:Class="StoreManager.ManageOrderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Manage Order" Height="600" Width="800" Loaded="Window_Loaded">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:StoreManager"
+        mc:Ignorable="d"
+        Title="Manage Order" Height="500" Width="500" 
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Loaded="Window_Loaded">
+
     <Grid>
-        <Label x:Name="lblEditor" Content="Update Order" FontSize="24" FontWeight="Bold" 
-               HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="70"/>
+        </Grid.RowDefinitions>
 
-        <!-- Order Information -->
-        <GroupBox Header="Order Information" Margin="20,50,20,0" Height="150" VerticalAlignment="Top">
-            <Grid>
-                <Label Content="Order ID:" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="txtOrderId" IsEnabled="False" HorizontalAlignment="Left" Margin="100,20,0,0" Width="100" VerticalAlignment="Top"/>
+        <!-- Header -->
+        <Border Grid.Row="0" Style="{StaticResource HeaderBorderStyle}">
+            <TextBlock x:Name="lblEditor" Text="Manage Order" 
+                       Style="{StaticResource HeaderStyle}"/>
+        </Border>
 
-                <Label Content="Customer:" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="txtCustomer" IsEnabled="False" HorizontalAlignment="Left" Margin="100,50,0,0" Width="200" VerticalAlignment="Top"/>
+        <!-- Form Content -->
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="20">
+            <StackPanel>
+                <!-- Order ID -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Order ID" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtOrderId" 
+                             Style="{StaticResource CommonTextBoxStyle}"
+                             IsReadOnly="True" Background="#F0F0F0"/>
+                </StackPanel>
 
-                <Label Content="Employee:" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top"/>
-                <ComboBox x:Name="cbEmployee" HorizontalAlignment="Left" Margin="100,80,0,0" Width="200" VerticalAlignment="Top"
-                         DisplayMemberPath="Name" SelectedValuePath="EmployeeId"/>
+                <!-- Customer -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Customer" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <TextBox x:Name="txtCustomer" 
+                             Style="{StaticResource CommonTextBoxStyle}"
+                             IsReadOnly="True" Background="#F0F0F0"/>
+                </StackPanel>
 
-                <Label Content="Order Date:" HorizontalAlignment="Left" Margin="320,20,0,0" VerticalAlignment="Top"/>
-                <DatePicker x:Name="dpOrderDate" HorizontalAlignment="Left" Margin="400,20,0,0" Width="120" VerticalAlignment="Top"/>
-            </Grid>
-        </GroupBox>
+                <!-- Employee -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Employee *" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <ComboBox x:Name="cbEmployee" 
+                              Height="35" FontSize="14" Margin="0,0,0,10"
+                              DisplayMemberPath="Name" 
+                              SelectedValuePath="EmployeeId"/>
+                </StackPanel>
 
-        <!-- Order Details -->
-        <GroupBox Header="Order Details" Margin="20,210,20,100">
-            <DataGrid x:Name="dgOrderDetails" AutoGenerateColumns="False" 
-                     CanUserAddRows="False" CanUserDeleteRows="False">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Product ID" Binding="{Binding ProductId}" Width="80" IsReadOnly="True"/>
-                    <DataGridTextColumn Header="Product Name" Binding="{Binding Product.ProductName}" Width="150" IsReadOnly="True"/>
-                    <DataGridTextColumn Header="Unit Price" Binding="{Binding UnitPrice}" Width="80"/>
-                    <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="80"/>
-                    <DataGridTextColumn Header="Discount" Binding="{Binding Discount}" Width="80"/>
-                </DataGrid.Columns>
-            </DataGrid>
-        </GroupBox>
+                <!-- Order Date -->
+                <StackPanel Margin="0,0,0,15">
+                    <TextBlock Text="Order Date *" 
+                               Style="{StaticResource CommonLabelStyle}"/>
+                    <DatePicker x:Name="dpOrderDate" 
+                                Height="35" FontSize="14" Margin="0,0,0,10"/>
+                </StackPanel>
 
-        <Button x:Name="btn_Save" Content="Save" HorizontalAlignment="Right" Margin="0,0,100,30" 
-                Width="80" Height="30" VerticalAlignment="Bottom" Click="btn_Save_Click"/>
-        <Button x:Name="btn_Cancel" Content="Cancel" HorizontalAlignment="Right" Margin="0,0,10,30" 
-                Width="80" Height="30" VerticalAlignment="Bottom" Click="btn_Cancel_Click"/>
+                <!-- Required fields note -->
+                <TextBlock Text="* Required fields" 
+                           FontSize="11" FontStyle="Italic" 
+                           Foreground="#666666" Margin="0,10,0,0"/>
+            </StackPanel>
+        </ScrollViewer>
+
+        <!-- Action Buttons -->
+        <Border Grid.Row="2" Background="#F8F9FA" BorderBrush="#E0E0E0" BorderThickness="0,1,0,0">
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Center" 
+                        VerticalAlignment="Center">
+                <Button x:Name="btn_SaveOrder" Content="💾 Save" 
+                        Style="{StaticResource SuccessButtonStyle}" 
+                        Width="120" Height="40" Margin="0,0,15,0"
+                        Click="btn_SaveOrder_Click"/>
+                <Button x:Name="btn_CancelOrder" Content="❌ Cancel" 
+                        Style="{StaticResource CommonButtonStyle}" 
+                        Width="120" Height="40" Background="#6C757D"
+                        Click="btn_CancelOrder_Click"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
